reposition content to prevent cut off on mobile safari

--- a/src/components/update_username.scss
+++ b/src/components/update_username.scss
@@ -254,7 +254,7 @@
 
         .instructions-prompt-container {
             position: relative;
-            top: 70%;
+            top: 64%;
             width: 100%;
             text-align: center;
             color: $cmwn-white;
